--- a/damul-client/src/index.css
+++ b/damul-client/src/index.css
@@ -66,7 +66,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Light.woff2")
     format("woff2");
   font-weight: 300;
@@ -74,7 +74,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2")
     format("woff2");
   font-weight: 400;
@@ -82,7 +82,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Medium.woff2")
     format("woff2");
   font-weight: 500;
@@ -90,7 +90,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-SemiBold.woff2")
     format("woff2");
   font-weight: 600;
@@ -98,7 +98,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Bold.woff2")
     format("woff2");
   font-weight: 700;
@@ -106,7 +106,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-ExtraBold.woff2")
     format("woff2");
   font-weight: 800;
@@ -114,7 +114,7 @@
 }
 
 @font-face {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Heavy.woff2")
     format("woff2");
   font-weight: 900;
@@ -122,5 +122,5 @@
 }
 
 html {
-  font-family: "SUITE-Reular";
+  font-family: "SUITE-Regular";
 }
