--- a/damul-client/src/index.css
+++ b/damul-client/src/index.css
@@ -148,6 +148,12 @@ html {
   background-color: #7fc259;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 html > body[data-scroll-locked] {
   margin-right: 0 !important;
 }
