--- a/damul-client/src/index.css
+++ b/damul-client/src/index.css
@@ -169,3 +169,7 @@ html {
 html > body[data-scroll-locked] {
   margin-right: 0 !important;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
